--- a/index.html
+++ b/index.html
@@ -13,15 +13,21 @@
       <h1>Promo Up2Dev - Montreuil</h1>
     </header>
     <container>
-      <div>
-        <h2>Notre charte de promo</h2>
-        <p>
-          Ces règles vont devoir s'ajouter à la charte que nous avons signés.<br />Ces
-          règles sont évidemment officieuses mais elles nous unissent!<br />Prenez
-          plaisir à les découvrir!
-        </p>
+      <div class="paragraphe_intro">
+        <div>
+          <h2>Notre charte de promo</h2>
+          <p>
+            Ces règles vont devoir s'ajouter à la charte que nous avons
+            signés.<br />Ces règles sont évidemment officieuses mais elles nous
+            unissent!<br />Prenez plaisir à les découvrir!
+          </p>
+        </div>
+        <div clas="bouton_rouge_haut">
+          <p>Accès Github</p>
+        </div>
       </div>
-      <div>
+
+      <div class="paragraphe_un">
         <h3>I. Engagement acadÃ©mique et comportement :</h3>
         <ul>
           <li>
@@ -29,16 +35,136 @@
             classe, Ã poser des questions pertinentes, et Ã contribuer de
             maniÃ¨re constructive.
           </li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>
+            Je m'engage Ã prendre une part active dans les discussions en
+            classe, Ã poser des questions pertinentes, et Ã contribuer de
+            maniÃ¨re constructive.
+          </li>
+
+          <li>
+            Je m'engage Ã ne jamais tricher ni plagier le travail d'autrui, et Ã
+            respecter scrupuleusement les rÃ¨gles d'intÃ©gritÃ© acadÃ©mique.
+          </li>
+          <li>
+            Nous nous engageons Ã Ã©viter tout jugement envers les autres, en
+            particulier lorsque le cafÃ© vient Ã manquer.
+          </li>
+          <li>Nous Ã©viterons toute forme de triche ou de plagiat.</li>
         </ul>
       </div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+
+      <div class="paragraphe_deux">
+        <h3>II. Engagement envers le groupe :</h3>
+        <ul>
+          <li>
+            Le mercredi soir sera rÃ©servÃ© Ã au moins 2 heures d'exercice
+            physique intensif.
+          </li>
+          <li>
+            Nous nous engageons Ã soutenir activement les uns les autres et Ã
+            cÃ©lÃ©brer ensemble nos succÃ¨s, quelle que soit notre position dans
+            le parcours d'apprentissage.
+          </li>
+          <li>
+            Nous nous engageons Ã maintenir une ambiance positive et conviviale
+          </li>
+          <li>De temps en temps, nous partagerons de bons repas ensemble.</li>
+          <li>Nous nous engageons Ã prÃ©server un environnement propre.</li>
+          <li>Nous nous engageons Ã accepter l'humour de Davy.</li>
+        </ul>
+      </div>
+
+      <div class="paragraphe_trois">
+        <h3>III. Respect du planning et du fonctionnement de la formation :</h3>
+        <li>
+          Nous nous conformerons rigoureusement aux horaires des cours, tout en
+          gardant Ã l'esprit que les rÃªves doivent se rÃ©aliser en dehors de
+          ces heures.
+        </li>
+        <li>
+          En cas d'empÃªchement, il est impÃ©ratif de prÃ©venir Ã l'avance.
+        </li>
+        <li>
+          Nous ferons des pauses lorsque nÃ©cessaire, sans attendre que
+          "monsieur trou du jour" perce.
+        </li>
+        <li>Les formateurs veilleront Ã respecter les pauses convenues.</li>
+        <li>
+          Nous nous abstenons de manger de l'Andouillette dans la salle de
+          classe.
+        </li>
+        <li>
+          Nous prendrons soin de la lumiÃ¨re et des yeux de nos camarades, en
+          les prÃ©venant en cas de besoin.
+        </li>
+        <li>
+          Ensemble, nous Å“uvrerons Ã la rÃ©alisation de nos diplÃ´mes, en nous
+          motivant mutuellement.
+        </li>
+        <li>
+          Nous pourrons compter les uns sur les autres, sauf en cas d'invasion
+          zombie.
+        </li>
+        <li>Davy sera le responsable de la bonne signature de net YparÃ©o.</li>
+      </div>
+
+      <div class="paragraphe_quatre">
+        <h3>IV. Bien-Ãªtre et dÃ©veloppement personnel :</h3>
+        <li>
+          Le mercredi soir sera rÃ©servÃ© Ã au moins 2 heures d'exercice
+          physique intensif.
+        </li>
+        <li>
+          Nous mettrons en place des activitÃ©s de cohÃ©sion pour renforcer
+          notre groupe.
+        </li>
+        <li>Chacun s'engage Ã s'amÃ©liorer en anglais.</li>
+        <li>
+          Si un problÃ¨me survient, nous nous engageons Ã en discuter
+          ouvertement au lieu de le garder pour nous jusqu'Ã l'explosion.
+        </li>
+        <li>
+          Nous prendrons un selfie de notre tÃªte le samedi soir pour maintenir
+          le lien entre nous tout en respectant la confidentialitÃ©.
+        </li>
+      </div>
+
+      <div class="paragraphe_cinq">
+        <h3>V. Sanctions pour manquements :</h3>
+        <li>
+          En cas de quatre manquements Ã la charte en une journÃ©e, il sera
+          nÃ©cessaire de prÃ©senter un mini exposÃ© le lendemain pour rappeler
+          nos engagements.
+        </li>
+        <li>
+          Je reconnais que cet engagement est essentiel pour ma rÃ©ussite
+          acadÃ©mique et pour ma croissance personnelle en tant qu'Ã©tudiant.
+        </li>
+        <li>
+          Je m'efforcerai de respecter cette charte tout au long de mon parcours
+          Ã©ducatif.
+        </li>
+      </div>
+
+      <div>
+        <h4>
+          Grâce à ces différentes règles, on obtient ekl parfait algorithme pour
+          que la formation se passe pour le mien !
+        </h4>
+      </div>
+
+      <div>
+        <p>
+          let competencesDePromo = []; let humeurPromo = 'Au top !'; if ('règles
+          comprises' == true && 'règles appliquées' == true) {
+          compétencesDePromo.push(newCompetences()); } else { humeurPromo = 'Pas
+          Top !' }
+        </p>
+      </div>
+
+      <div class="bouton_rouge_bas">
+        <p>Random apprenant</p>
+      </div>
     </container>
   </body>
 </html>
