Css alimenté et html button en plus

--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
             unissent!<br />Prenez plaisir à les découvrir!
           </p>
         </div>
-        <div clas="bouton_rouge_haut">
-          <p>Accès Github</p>
+        <div class="bouton_rouge_haut">
+          <button
+            onclick="window.location.href='https://github.com/IdrissaSoumare/Idris-Xavier-brief-charte.git';"
+          >
+            Accès Github
+          </button>
         </div>
       </div>
 
@@ -146,9 +150,9 @@
         </li>
       </div>
 
-      <div>
+      <footer class="pied_de_page ">
         <h4>
-          Grâce à ces différentes règles, on obtient ekl parfait algorithme pour
+          Grâce à ces différentes règles, on obtient un parfait algorithme pour
           que la formation se passe pour le mien !
         </h4>
       </div>
@@ -164,7 +168,8 @@
 
       <div class="bouton_rouge_bas">
         <p>Random apprenant</p>
-      </div>
+        </div>
+      </footer>
     </container>
   </body>
 </html>
