--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
             signés.<br />Ces règles sont évidemment officieuses mais elles nous
             unissent!<br />Prenez plaisir à les découvrir!
           </p>
-        </div>
-        <div clas="bouton_rouge_haut">
-          <p>Accès Github</p>
+          <div class="bouton_rouge_haut">
+            <buttononclick="window.location.href
+              ='https://github.com/IdrissaSoumare/Idris-Xavier-brief-charte.git';"
+            >
+              Accès Github
+            </button>
+          </div>
         </div>
       </div>
 
