dernieres modif avant depart

--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
       <h1>Promo Up2Dev - Montreuil</h1>
     </header>
     <container>
-      <div class="paragraphe_intro">
+      <div id="paragraphe">
+        <div class="bouton_rouge_haut">
+          <button
+            onclick="window.location.href='https://github.com/IdrissaSoumare/Idris-Xavier-brief-charte.git';"
+          >
+            Accès Github
+          </button>
+        </div>
         <div>
           <h2>Notre charte de promo</h2>
           <p>
@@ -22,16 +29,9 @@
             unissent!<br />Prenez plaisir à les découvrir!
           </p>
         </div>
-        <div class="bouton_rouge_haut">
-          <button
-            onclick="window.location.href='https://github.com/IdrissaSoumare/Idris-Xavier-brief-charte.git';"
-          >
-            Accès Github
-          </button>
-        </div>
       </div>
 
-      <div class="paragraphe_un">
+      <div id="paragraphe">
         <h3>I. Engagement acadÃ©mique et comportement :</h3>
         <ul>
           <li>
@@ -57,7 +57,7 @@
         </ul>
       </div>
 
-      <div class="paragraphe_deux">
+      <div id="paragraphe">
         <h3>II. Engagement envers le groupe :</h3>
         <ul>
           <li>
@@ -78,7 +78,7 @@
         </ul>
       </div>
 
-      <div class="paragraphe_trois">
+      <div id="paragraphe">
         <h3>III. Respect du planning et du fonctionnement de la formation :</h3>
         <li>
           Nous nous conformerons rigoureusement aux horaires des cours, tout en
@@ -112,7 +112,7 @@
         <li>Davy sera le responsable de la bonne signature de net YparÃ©o.</li>
       </div>
 
-      <div class="paragraphe_quatre">
+      <div id="paragraphe">
         <h3>IV. Bien-Ãªtre et dÃ©veloppement personnel :</h3>
         <li>
           Le mercredi soir sera rÃ©servÃ© Ã au moins 2 heures d'exercice
@@ -133,7 +133,7 @@
         </li>
       </div>
 
-      <div class="paragraphe_cinq">
+      <div id="paragraphe">
         <h3>V. Sanctions pour manquements :</h3>
         <li>
           En cas de quatre manquements Ã la charte en une journÃ©e, il sera
@@ -149,25 +149,30 @@
           Ã©ducatif.
         </li>
       </div>
-
-      <footer class="pied_de_page ">
+      <div class="differentes_regles">
         <h4>
           Grâce à ces différentes règles, on obtient un parfait algorithme pour
           que la formation se passe pour le mien !
         </h4>
+        <div class="code_js">
+          <p>
+            let competencesDePromo = []; let humeurPromo = 'Au top !';<br />
+            if ('règlescomprises' == true && 'règles appliquées' == true) {
+            compétencesDePromo.push(newCompetences());<br />
+            } <br />
+            else { <br />
+            humeurPromo = 'PasTop !' }
+          </p>
+        </div>
       </div>
 
-      <div>
-        <p>
-          let competencesDePromo = []; let humeurPromo = 'Au top !'; if ('règles
-          comprises' == true && 'règles appliquées' == true) {
-          compétencesDePromo.push(newCompetences()); } else { humeurPromo = 'Pas
-          Top !' }
-        </p>
-      </div>
-
-      <div class="bouton_rouge_bas">
-        <p>Random apprenant</p>
+      <footer class="pied_de_page">
+        <div class="bouton_rouge_bas">
+          <button
+            onclick="window.location.href='https://github.com/IdrissaSoumare/Idris-Xavier-brief-charte.git';"
+          >
+            Random Apprenant
+          </button>
         </div>
       </footer>
     </container>
