Orthographe, favicon, puces Simplon, couleurs, centrage du bouton bas

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
     <script src="script.js" defer></script>
-
+    <link rel="icon" type="image/png" href=" images/favicon.png" />
     <title>charte de groupe</title>
   </head>
   <body>
@@ -25,35 +25,33 @@
           <h2>Notre charte de promo</h2>
           <p>
             Ces règles vont devoir s'ajouter à la charte que nous avons
-            signés.<br />Ces règles sont évidemment officieuses mais elles nous
+            signé.<br />Ces règles sont évidemment officieuses mais elles nous
             unissent!<br />Prenez plaisir à les découvrir!
           </p>
         </div>
       </div>
 
       <div id="paragraphe">
-        <h3>I. Engagement acadÃ©mique et comportement :</h3>
+        <h3>I. Engagement acadamique et comportement :</h3>
         <ul>
           <li>
-            Je m'engage Ã prendre une part active dans les discussions en
-            classe, Ã poser des questions pertinentes, et Ã contribuer de
-            maniÃ¨re constructive.
+            Je m'engage à prendre une part active dans les discussions en
+            classe, à poser des questions pertinentes, et à contribuer de
+            manière constructive à la construction de nos savoirs.
           </li>
           <li>
-            Je m'engage Ã prendre une part active dans les discussions en
-            classe, Ã poser des questions pertinentes, et Ã contribuer de
-            maniÃ¨re constructive.
-          </li>
-
-          <li>
-            Je m'engage Ã ne jamais tricher ni plagier le travail d'autrui, et Ã
-            respecter scrupuleusement les rÃ¨gles d'intÃ©gritÃ© acadÃ©mique.
+            Je m'engage à ne jamais tricher ni plagier le travail d'autrui, et à
+            respecter scrupuleusement les règles d'intégrité académiques.
           </li>
           <li>
-            Nous nous engageons Ã Ã©viter tout jugement envers les autres, en
-            particulier lorsque le cafÃ© vient Ã manquer.
+            Nous nous engageons à éviter tout jugement envers les autres, en
+            particulier, lorsque le café vient à manquer.
           </li>
-          <li>Nous Ã©viterons toute forme de triche ou de plagiat.</li>
+          <li>
+            Je m'engage à traiter mes enseignants et mes camarades avec respect
+            et courtoisie, en évitant tout comportement perturbateur en classe.
+          </li>
+          <li>Nous éviterons toute forme de triche ou de plagiat.</li>
         </ul>
       </div>
 
@@ -61,103 +59,107 @@
         <h3>II. Engagement envers le groupe :</h3>
         <ul>
           <li>
-            Le mercredi soir sera rÃ©servÃ© Ã au moins 2 heures d'exercice
-            physique intensif.
+            Le mercredi soir sera réservé à au moins 2 heures d'exercices
+            physiques intensifs.
           </li>
           <li>
-            Nous nous engageons Ã soutenir activement les uns les autres et Ã
-            cÃ©lÃ©brer ensemble nos succÃ¨s, quelle que soit notre position dans
+            Nous nous engageons à nous soutenir activement les uns les autres et
+            à célébrer ensemble nos succés, quelle que soit notre position dans
             le parcours d'apprentissage.
           </li>
           <li>
-            Nous nous engageons Ã maintenir une ambiance positive et conviviale
+            Nous nous engageons à maintenir une ambiance positive et conviviale.
           </li>
           <li>De temps en temps, nous partagerons de bons repas ensemble.</li>
-          <li>Nous nous engageons Ã prÃ©server un environnement propre.</li>
+          <li>Nous nous engageons Ã préserver un environnement propre.</li>
           <li>Nous nous engageons Ã accepter l'humour de Davy.</li>
         </ul>
       </div>
 
       <div id="paragraphe">
         <h3>III. Respect du planning et du fonctionnement de la formation :</h3>
-        <li>
-          Nous nous conformerons rigoureusement aux horaires des cours, tout en
-          gardant Ã l'esprit que les rÃªves doivent se rÃ©aliser en dehors de
-          ces heures.
-        </li>
-        <li>
-          En cas d'empÃªchement, il est impÃ©ratif de prÃ©venir Ã l'avance.
-        </li>
-        <li>
-          Nous ferons des pauses lorsque nÃ©cessaire, sans attendre que
-          "monsieur trou du jour" perce.
-        </li>
-        <li>Les formateurs veilleront Ã respecter les pauses convenues.</li>
-        <li>
-          Nous nous abstenons de manger de l'Andouillette dans la salle de
-          classe.
-        </li>
-        <li>
-          Nous prendrons soin de la lumiÃ¨re et des yeux de nos camarades, en
-          les prÃ©venant en cas de besoin.
-        </li>
-        <li>
-          Ensemble, nous Å“uvrerons Ã la rÃ©alisation de nos diplÃ´mes, en nous
-          motivant mutuellement.
-        </li>
-        <li>
-          Nous pourrons compter les uns sur les autres, sauf en cas d'invasion
-          zombie.
-        </li>
-        <li>Davy sera le responsable de la bonne signature de net YparÃ©o.</li>
+        <ul>
+          <li>
+            Nous nous conformerons rigoureusement aux horaires des cours, tout
+            en gardant à l'esprit que les rêves doivent se réaliser en dehors de
+            ces heures.
+          </li>
+          <li>
+            En cas d'empêchement, il est impératif de prévenir à l'avance.
+          </li>
+          <li>
+            Nous ferons des pauses lorsque nécessaire, sans attendre que
+            "monsieur trou du jour" se mette à percer.
+          </li>
+          <li>Les formateurs veilleront à respecter les pauses convenues.</li>
+          <li>
+            Nous nous abstiendrons de manger de l'Andouillette dans la salle de
+            classe.
+          </li>
+          <li>
+            Nous prendrons soin de la lumière et des yeux de nos camarades, en
+            les prévenant en cas de besoin.
+          </li>
+          <li>
+            Ensemble, nous oeuvrerons à la réalisation de nos diplômes, en nous
+            motivant mutuellement.
+          </li>
+          <li>
+            Nous pourrons compter les uns sur les autres, sauf, en cas
+            d'invasion zombie.
+          </li>
+          <li>Davy sera le responsable de la bonne signature de net YparéO.</li>
+        </ul>
       </div>
 
       <div id="paragraphe">
-        <h3>IV. Bien-Ãªtre et dÃ©veloppement personnel :</h3>
-        <li>
-          Le mercredi soir sera rÃ©servÃ© Ã au moins 2 heures d'exercice
-          physique intensif.
-        </li>
-        <li>
-          Nous mettrons en place des activitÃ©s de cohÃ©sion pour renforcer
-          notre groupe.
-        </li>
-        <li>Chacun s'engage Ã s'amÃ©liorer en anglais.</li>
-        <li>
-          Si un problÃ¨me survient, nous nous engageons Ã en discuter
-          ouvertement au lieu de le garder pour nous jusqu'Ã l'explosion.
-        </li>
-        <li>
-          Nous prendrons un selfie de notre tÃªte le samedi soir pour maintenir
-          le lien entre nous tout en respectant la confidentialitÃ©.
-        </li>
+        <h3>IV. Bien-être et développement personnel :</h3>
+        <ul>
+          <li>
+            Nous mettrons en place des activités de cohésion pour renforcer
+            notre groupe.
+          </li>
+          <li>Chacun s'engage à s'améliorer en anglais.</li>
+          <li>
+            Si un problème survient, nous nous engageons à en discuter
+            ouvertement au lieu de le garder pour nous jusqu'à Explosion, <br />
+            ...ou Implosion.
+          </li>
+          <li>
+            Nous prendrons un selfie de notre tête le samedi soir pour maintenir
+            le lien entre nous tout en respectant la confidentialité.
+          </li>
+        </ul>
       </div>
 
       <div id="paragraphe">
         <h3>V. Sanctions pour manquements :</h3>
-        <li>
-          En cas de quatre manquements Ã la charte en une journÃ©e, il sera
-          nÃ©cessaire de prÃ©senter un mini exposÃ© le lendemain pour rappeler
-          nos engagements.
-        </li>
-        <li>
-          Je reconnais que cet engagement est essentiel pour ma rÃ©ussite
-          acadÃ©mique et pour ma croissance personnelle en tant qu'Ã©tudiant.
-        </li>
-        <li>
-          Je m'efforcerai de respecter cette charte tout au long de mon parcours
-          Ã©ducatif.
-        </li>
+        <ul>
+          <li>
+            En cas de quatre manquements à la charte sur une journée, il sera
+            demander au contrevenant de présenter un mini exposé le lendemain
+            pour rappeler nos engagements.
+          </li>
+          <li>
+            Je reconnais que cet engagement est essentiel pour ma réussite
+            académique et pour ma croissance personnelle en tant qu'étudiant.
+          </li>
+          <li>
+            Je m'efforcerai de respecter cette charte tout au long de mon
+            parcours de formation.
+          </li>
+        </ul>
       </div>
       <div class="differentes_regles">
         <h4>
           Grâce à ces différentes règles, on obtient un parfait algorithme pour
-          que la formation se passe pour le mien !
+          que la formation se passe pour le mieux !
         </h4>
         <div class="code_js">
           <p>
-            let competencesDePromo = []; let humeurPromo = 'Au top !';<br />
-            if ('règlescomprises' == true && 'règles appliquées' == true) {
+            let competencesDePromo = []; <br />
+            let humeurPromo = 'Au top !';<br />
+            if ('règlescomprises' == true && 'règles appliquées' == true) {<br />
             compétencesDePromo.push(newCompetences());<br />
             } <br />
             else { <br />
