--- a/index.html
+++ b/index.html
@@ -32,27 +32,32 @@
       </div>
 
       <div id="paragraphe">
-        <h3>I. Engagement acadamique et comportement :</h3>
-        <ul>
-          <li>
-            Je m'engage à prendre une part active dans les discussions en
-            classe, à poser des questions pertinentes, et à contribuer de
-            manière constructive à la construction de nos savoirs.
-          </li>
-          <li>
-            Je m'engage à ne jamais tricher ni plagier le travail d'autrui, et à
-            respecter scrupuleusement les règles d'intégrité académiques.
-          </li>
-          <li>
-            Nous nous engageons à éviter tout jugement envers les autres, en
-            particulier, lorsque le café vient à manquer.
-          </li>
-          <li>
-            Je m'engage à traiter mes enseignants et mes camarades avec respect
-            et courtoisie, en évitant tout comportement perturbateur en classe.
-          </li>
-          <li>Nous éviterons toute forme de triche ou de plagiat.</li>
-        </ul>
+        <button class="accordion">
+          I. Engagement académique et comportement
+        </button>
+        <div class="panel">
+          <ul>
+            <li>
+              Je m'engage à prendre une part active dans les discussions en
+              classe, à poser des questions pertinentes, et à contribuer de
+              manière constructive à la construction de nos savoirs.
+            </li>
+            <li>
+              Je m'engage à ne jamais tricher ni plagier le travail d'autrui, et
+              à respecter scrupuleusement les règles d'intégrité académiques.
+            </li>
+            <li>
+              Nous nous engageons à éviter tout jugement envers les autres, en
+              particulier, lorsque le café vient à manquer.
+            </li>
+            <li>
+              Je m'engage à traiter mes enseignants et mes camarades avec
+              respect et courtoisie, en évitant tout comportement perturbateur
+              en classe.
+            </li>
+            <li>Nous éviterons toute forme de triche ou de plagiat.</li>
+          </ul>
+        </div>
       </div>
 
       <div id="paragraphe">
