en attente des modif d'idrissa

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
       </div>
 
       <div id="paragraphe">
+        <button class="accordion">
         <h3>I. Engagement acadamique et comportement :</h3>
+        </button>
+        <div class="panel>"
         <ul>
           <li>
             Je m'engage à prendre une part active dans les discussions en
@@ -53,6 +56,7 @@
           </li>
           <li>Nous éviterons toute forme de triche ou de plagiat.</li>
         </ul>
+        </div>
       </div>
 
       <div id="paragraphe">
