--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Promo Up2Dev - Montreuil</h1>
     </header>
     <container>
-      <div id="paragraphe">
+      <div id="charte">
         <div class="bouton_rouge_haut">
           <button
             onclick="window.location.href='https://github.com/IdrissaSoumare/Idris-Xavier-brief-charte.git';"
@@ -62,7 +62,7 @@
 
       <div id="paragraphe">
         <button class="accordion">
-          I. Engagement académique et comportement
+          III. Respect du planning et du fonctionnement de la formation
         </button>
         <div class="panel">
           <ul>
@@ -88,7 +88,7 @@
 
       <div id="paragraphe">
         <button class="accordion">
-          I. Engagement académique et comportement
+          IV. Bien-être et développement personne
         </button>
         <div class="panel">
           <ul>
@@ -129,9 +129,7 @@
       </div>
 
       <div id="paragraphe">
-        <button class="accordion">
-          I. Engagement académique et comportement
-        </button>
+        <button class="accordion">V. Sanctions pour manquements</button>
         <div class="panel">
           <ul>
             <li>
@@ -159,22 +157,21 @@
           I. Engagement académique et comportement
         </button>
         <div class="panel">
-
-        <ul>
-          <li>
-            En cas de quatre manquements à la charte sur une journée, il sera
-            demander au contrevenant de présenter un mini exposé le lendemain
-            pour rappeler nos engagements.
-          </li>
-          <li>
-            Je reconnais que cet engagement est essentiel pour ma réussite
-            académique et pour ma croissance personnelle en tant qu'étudiant.
-          </li>
-          <li>
-            Je m'efforcerai de respecter cette charte tout au long de mon
-            parcours de formation.
-          </li>
-        </ul>
+          <ul>
+            <li>
+              En cas de quatre manquements à la charte sur une journée, il sera
+              demander au contrevenant de présenter un mini exposé le lendemain
+              pour rappeler nos engagements.
+            </li>
+            <li>
+              Je reconnais que cet engagement est essentiel pour ma réussite
+              académique et pour ma croissance personnelle en tant qu'étudiant.
+            </li>
+            <li>
+              Je m'efforcerai de respecter cette charte tout au long de mon
+              parcours de formation.
+            </li>
+          </ul>
         </div>
       </div>
       <div class="differentes_regles">
