--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
 
       <div id="paragraphe">
-        <button class="accordion">
+        <button class="accordion" id="titre_h3">
           I. Engagement académique et comportement
         </button>
         <div class="panel">
@@ -61,14 +61,14 @@
       </div>
 
       <div id="paragraphe">
-        <button class="accordion">
-          III. Respect du planning et du fonctionnement de la formation
+        <button class="accordion" id="titre_h3">
+          II. Engagemenent envers le Groupe :
         </button>
         <div class="panel">
           <ul>
             <li>
-              Le mercredi soir sera réservé à au moins 2 heures d'exercices
-              physiques intensifs.
+              Chaque membre s'engage à partager au moins un article, tutoriel ou
+              ressource pertinente.
             </li>
             <li>
               Nous nous engageons à nous soutenir activement les uns les autres
@@ -87,64 +87,76 @@
       </div>
 
       <div id="paragraphe">
-        <h3>III. Respect du planning et du fonctionnement de la formation :</h3>
-        <ul>
-          <li>
-            Nous nous conformerons rigoureusement aux horaires des cours, tout
-            en gardant à l'esprit que les rêves doivent se réaliser en dehors de
-            ces heures.
-          </li>
-          <li>
-            En cas d'empêchement, il est impératif de prévenir à l'avance.
-          </li>
-          <li>
-            Nous ferons des pauses lorsque nécessaire, sans attendre que
-            "monsieur trou du jour" se mette à percer.
-          </li>
-          <li>Les formateurs veilleront à respecter les pauses convenues.</li>
-          <li>
-            Nous nous abstiendrons de manger de l'Andouillette dans la salle de
-            classe.
-          </li>
-          <li>
-            Nous prendrons soin de la lumière et des yeux de nos camarades, en
-            les prévenant en cas de besoin.
-          </li>
-          <li>
-            Ensemble, nous oeuvrerons à la réalisation de nos diplômes, en nous
-            motivant mutuellement.
-          </li>
-          <li>
-            Nous pourrons compter les uns sur les autres, sauf, en cas
-            d'invasion zombie.
-          </li>
-          <li>Davy sera le responsable de la bonne signature de net YparéO.</li>
-        </ul>
+        <button class="accordion" id="titre_h3">
+          III. Respect du planning et du fonctionnement de la formation :
+        </button>
+        <div class="panel">
+          <ul>
+            <li>
+              Nous nous conformerons rigoureusement aux horaires des cours, tout
+              en gardant à l'esprit que les rêves doivent se réaliser en dehors
+              de ces heures.
+            </li>
+            <li>
+              En cas d'empêchement, il est impératif de prévenir à l'avance.
+            </li>
+            <li>
+              Nous ferons des pauses lorsque nécessaire, sans attendre que
+              "monsieur trou du jour" se mette à percer.
+            </li>
+            <li>Les formateurs veilleront à respecter les pauses convenues.</li>
+            <li>
+              Nous nous abstiendrons de manger de l'Andouillette dans la salle
+              de classe.
+            </li>
+            <li>
+              Nous prendrons soin de la lumière et des yeux de nos camarades, en
+              les prévenant en cas de besoin.
+            </li>
+            <li>
+              Ensemble, nous oeuvrerons à la réalisation de nos diplômes, en
+              nous motivant mutuellement.
+            </li>
+            <li>
+              Nous pourrons compter les uns sur les autres, sauf, en cas
+              d'invasion zombie.
+            </li>
+            <li>
+              Davy sera le responsable de la bonne signature de net YparéO.
+            </li>
+          </ul>
+        </div>
       </div>
 
       <div id="paragraphe">
-        <h3>IV. Bien-être et développement personnel :</h3>
-        <ul>
-          <li>
-            Nous mettrons en place des activités de cohésion pour renforcer
-            notre groupe.
-          </li>
-          <li>Chacun s'engage à s'améliorer en anglais.</li>
-          <li>
-            Si un problème survient, nous nous engageons à en discuter
-            ouvertement au lieu de le garder pour nous jusqu'à Explosion, <br />
-            ...ou Implosion.
-          </li>
-          <li>
-            Nous prendrons un selfie de notre tête le samedi soir pour maintenir
-            le lien entre nous tout en respectant la confidentialité.
-          </li>
-        </ul>
+        <button class="accordion" id="titre_h3">
+          IV. Bien-être et développement personnel :
+        </button>
+        <div class="panel">
+          <ul>
+            <li>
+              Nous mettrons en place des activités de cohésion pour renforcer
+              notre groupe.
+            </li>
+            <li>Chacun s'engage à s'améliorer en anglais.</li>
+            <li>
+              Si un problème survient, nous nous engageons à en discuter
+              ouvertement au lieu de le garder pour nous jusqu'à Explosion,
+              <br />
+              ...ou Implosion.
+            </li>
+            <li>
+              Nous prendrons un selfie de notre tête le samedi soir pour
+              maintenir le lien entre nous tout en respectant la
+              confidentialité.
+            </li>
+          </ul>
+        </div>
       </div>
 
       <div id="paragraphe">
-        <button class="accordion">
-          I. Engagement académique et comportement
+        <button class="accordion" id="titre_h3">
+          V. Sanctions pour manquements :
         </button>
         <div class="panel">
           <ul>
@@ -184,11 +196,7 @@
 
       <footer class="pied_de_page">
         <div class="bouton_rouge_bas">
-          <button
-            onclick="window.location.href='https://github.com/IdrissaSoumare/Idris-Xavier-brief-charte.git';"
-          >
-            Random Apprenant
-          </button>
+          <button id="change">Random Apprenant</button>
         </div>
       </footer>
     </container>
