bouton rouge du bas js

--- a/index.html
+++ b/index.html
@@ -194,11 +194,7 @@
 
       <footer class="pied_de_page">
         <div class="bouton_rouge_bas">
-          <button
-            onclick="window.location.href='https://github.com/IdrissaSoumare/Idris-Xavier-brief-charte.git';"
-          >
-            Random Apprenant
-          </button>
+          <button id="change">Random Apprenant</button>
         </div>
       </footer>
     </container>
