On y est presque

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
 
       <div id="paragraphe">
-        <button class="accordion" id="titre_h3">
+        <button class="accordion">
           I. Engagement académique et comportement
         </button>
         <div class="panel">
@@ -61,9 +61,7 @@
       </div>
 
       <div id="paragraphe">
-        <button class="accordion" id="titre_h3">
-          II. Engagemenent envers le Groupe :
-        </button>
+        <button class="accordion">II. Engagemenent envers le Groupe :</button>
         <div class="panel">
           <ul>
             <li>
@@ -87,7 +85,7 @@
       </div>
 
       <div id="paragraphe">
-        <button class="accordion" id="titre_h3">
+        <button class="accordion">
           III. Respect du planning et du fonctionnement de la formation :
         </button>
         <div class="panel">
@@ -129,7 +127,7 @@
       </div>
 
       <div id="paragraphe">
-        <button class="accordion" id="titre_h3">
+        <button class="accordion">
           IV. Bien-être et développement personnel :
         </button>
         <div class="panel">
@@ -194,7 +192,7 @@
         </div>
       </div>
 
-      <footer class="pied_de_page">
+      <footer>
         <div class="bouton_rouge_bas">
           <button id="change">Random Apprenant</button>
         </div>
