qq modif en plus 14102023

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <h1>Promo Up2Dev - Montreuil</h1>
+      <h1 class="titre_h1">Promo Up2Dev - Montreuil</h1>
     </header>
     <container>
       <div id="charte">
@@ -152,10 +152,8 @@
         </div>
       </div>
 
-      <div id="paragraphe">
-        <button class="accordion" id="titre_h3">
-          V. Sanctions pour manquements :
-        </button>
+      <div id="paragraphe" id="titre_sanctions">
+        <button class="accordion">V. Sanctions pour manquements :</button>
         <div class="panel">
           <ul>
             <li>
@@ -179,17 +177,17 @@
           Grâce à ces différentes règles, on obtient un parfait algorithme pour
           que la formation se passe pour le mieux !
         </h4>
-        <div class="code_js">
-          <p>
-            let competencesDePromo = []; <br />
-            let humeurPromo = 'Au top !';<br />
-            if ('règlescomprises' == true && 'règles appliquées' == true) {<br />
-            compétencesDePromo.push(newCompetences());<br />
-            } <br />
-            else { <br />
-            humeurPromo = 'PasTop !' }
-          </p>
-        </div>
+      </div>
+      <div class="code_js">
+        <p>
+          let competencesDePromo = []; <br />
+          let humeurPromo = 'Au top !';<br />
+          if ('règlescomprises' == true && 'règles appliquées' == true) {<br />
+          compétencesDePromo.push(newCompetences());<br />
+          } <br />
+          else { <br />
+          humeurPromo = 'PasTop !' }
+        </p>
       </div>
 
       <footer>
