decalage h1 et pose de flamme

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <p>
             Ces règles vont devoir s'ajouter à la charte que nous avons
             signé.<br />Ces règles sont évidemment officieuses mais elles nous
-            unissent!<br />Prenez plaisir à les découvrir!
+            unissent!<br />Prenez plaisir à les découvrir! <img src="images/740842.png">
           </p>
         </div>
       </div>
