--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
   </head>
   <body>
     <header>
-      <h1 class="titre_h1">Promo Up2Dev - Montreuil</h1>
+      <div class="align-left">
+        <h1 class="titre_h1">Promo Up2Dev - Montreuil</h1>
+      </div>
     </header>
     <container>
-      <div id="charte">
+      <div class="flex-row" id="charte">
         <div class="bouton_rouge_haut">
           <button
             onclick="window.location.href='https://github.com/IdrissaSoumare/Idris-Xavier-brief-charte.git';"
@@ -21,13 +23,13 @@
             Accès Github
           </button>
         </div>
-        <div>
+        <div class="intro">
           <h2>Notre charte de promo</h2>
           <p>
             Ces règles vont devoir s'ajouter à la charte que nous avons
             signé.<br />Ces règles sont évidemment officieuses mais elles nous
             unissent!<br />Prenez plaisir à les découvrir!
-            <img src="images/740842.png" />
+            <span><img src="images/740842.png" /></span>
           </p>
         </div>
       </div>
@@ -183,6 +185,7 @@
         <p>
           let competencesDePromo = []; <br />
           let humeurPromo = 'Au top !';<br />
+          <br />
           if ('règlescomprises' == true && 'règles appliquées' == true) {<br />
           compétencesDePromo.push(newCompetences());<br />
           } <br />
