--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div class="flex-row" id="charte">
         <div class="bouton_rouge_haut">
           <button
+            id="btn_rouge"
             onclick="window.location.href='https://github.com/IdrissaSoumare/Idris-Xavier-brief-charte.git';"
           >
             Accès Github
@@ -26,9 +27,9 @@
         <div class="intro">
           <h2>Notre charte de promo</h2>
           <p>
-            Ces règles vont devoir s'ajouter à la charte que nous avons
-            signé.<br />Ces règles sont évidemment officieuses mais elles nous
-            unissent!<br />Prenez plaisir à les découvrir!
+            Ces règles vont devoir s'ajouter à la charte que nous avons signé.
+            Ces règles sont évidemment officieuses mais elles nous unissent!<br />...Prenez
+            plaisir à les découvrir!
             <span><img src="images/740842.png" /></span>
           </p>
         </div>
