--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <title>charte de groupe</title>
   </head>
   <body>
-    <header>
-      <div class="align-left">
-        <h1 class="titre_h1">Promo Up2Dev - Montreuil</h1>
-      </div>
-    </header>
-    <container>
-      <div class="flex-row" id="charte">
+    <content id="contenant">
+      <header class="bloc_a">
+        <div class="align-left">
+          <h1 class="titre_h1">Promo Up2Dev - Montreuil</h1>
+        </div>
+      </header>
+
+      <div class="bloc_b">
         <div class="bouton_rouge_haut">
           <button
             id="btn_rouge"
@@ -24,8 +25,9 @@
             Accès Github
           </button>
         </div>
+
         <div class="intro">
-          <h2>Notre charte de promo</h2>
+          <p id="titre_classe">Notre charte de promo</p>
           <p>
             Ces règles vont devoir s'ajouter à la charte que nous avons signé.
             Ces règles sont évidemment officieuses mais elles nous unissent!<br />...Prenez
@@ -35,164 +37,183 @@
         </div>
       </div>
 
-      <div id="paragraphe">
-        <button class="accordion">
-          I. Engagement académique et comportement
-        </button>
-        <div class="panel">
-          <ul>
-            <li>
-              Je m'engage à prendre une part active dans les discussions en
-              classe, à poser des questions pertinentes, et à contribuer de
-              manière constructive à la construction de nos savoirs.
-            </li>
-            <li>
-              Je m'engage à ne jamais tricher ni plagier le travail d'autrui, et
-              à respecter scrupuleusement les règles d'intégrité académiques.
-            </li>
-            <li>
-              Nous nous engageons à éviter tout jugement envers les autres, en
-              particulier, lorsque le café vient à manquer.
-            </li>
-            <li>
-              Je m'engage à traiter mes enseignants et mes camarades avec
-              respect et courtoisie, en évitant tout comportement perturbateur
-              en classe.
-            </li>
-            <li>Nous éviterons toute forme de triche ou de plagiat.</li>
-          </ul>
+      <div class="bloc_c">
+        <div id="paragraphe">
+          <button class="accordion">
+            I. Engagement académique et comportement
+          </button>
+          <div class="panel">
+            <ul>
+              <li>
+                Je m'engage à prendre une part active dans les discussions en
+                classe, à poser des questions pertinentes, et à contribuer de
+                manière constructive à la construction de nos savoirs.
+              </li>
+              <li>
+                Je m'engage à ne jamais tricher ni plagier le travail d'autrui,
+                et à respecter scrupuleusement les règles d'intégrité
+                académiques.
+              </li>
+              <li>
+                Nous nous engageons à éviter tout jugement envers les autres, en
+                particulier, lorsque le café vient à manquer.
+              </li>
+              <li>
+                Je m'engage à traiter mes enseignants et mes camarades avec
+                respect et courtoisie, en évitant tout comportement perturbateur
+                en classe.
+              </li>
+              <li>Nous éviterons toute forme de triche ou de plagiat.</li>
+            </ul>
+          </div>
         </div>
       </div>
 
-      <div id="paragraphe">
-        <button class="accordion">II. Engagemenent envers le Groupe :</button>
-        <div class="panel">
-          <ul>
-            <li>
-              Chaque membre s'engage à partager au moins un article, tutoriel ou
-              ressource pertinente.
-            </li>
-            <li>
-              Nous nous engageons à nous soutenir activement les uns les autres
-              et à célébrer ensemble nos succés, quelle que soit notre position
-              dans le parcours d'apprentissage.
-            </li>
-            <li>
-              Nous nous engageons à maintenir une ambiance positive et
-              conviviale.
-            </li>
-            <li>De temps en temps, nous partagerons de bons repas ensemble.</li>
-            <li>Nous nous engageons Ã préserver un environnement propre.</li>
-            <li>Nous nous engageons Ã accepter l'humour de Davy.</li>
-          </ul>
+      <div class="bloc_d">
+        <div id="paragraphe">
+          <button class="accordion">II. Engagemenent envers le Groupe :</button>
+          <div class="panel">
+            <ul>
+              <li>
+                Chaque membre s'engage à partager au moins un article, tutoriel
+                ou ressource pertinente.
+              </li>
+              <li>
+                Nous nous engageons à nous soutenir activement les uns les
+                autres et à célébrer ensemble nos succés, quelle que soit notre
+                position dans le parcours d'apprentissage.
+              </li>
+              <li>
+                Nous nous engageons à maintenir une ambiance positive et
+                conviviale.
+              </li>
+              <li>
+                De temps en temps, nous partagerons de bons repas ensemble.
+              </li>
+              <li>Nous nous engageons Ã préserver un environnement propre.</li>
+              <li>Nous nous engageons Ã accepter l'humour de Davy.</li>
+            </ul>
+          </div>
         </div>
       </div>
 
-      <div id="paragraphe">
-        <button class="accordion">
-          III. Respect du planning et du fonctionnement de la formation :
-        </button>
-        <div class="panel">
-          <ul>
-            <li>
-              Nous nous conformerons rigoureusement aux horaires des cours, tout
-              en gardant à l'esprit que les rêves doivent se réaliser en dehors
-              de ces heures.
-            </li>
-            <li>
-              En cas d'empêchement, il est impératif de prévenir à l'avance.
-            </li>
-            <li>
-              Nous ferons des pauses lorsque nécessaire, sans attendre que
-              "monsieur trou du jour" se mette à percer.
-            </li>
-            <li>Les formateurs veilleront à respecter les pauses convenues.</li>
-            <li>
-              Nous nous abstiendrons de manger de l'Andouillette dans la salle
-              de classe.
-            </li>
-            <li>
-              Nous prendrons soin de la lumière et des yeux de nos camarades, en
-              les prévenant en cas de besoin.
-            </li>
-            <li>
-              Ensemble, nous oeuvrerons à la réalisation de nos diplômes, en
-              nous motivant mutuellement.
-            </li>
-            <li>
-              Nous pourrons compter les uns sur les autres, sauf, en cas
-              d'invasion zombie.
-            </li>
-            <li>
-              Davy sera le responsable de la bonne signature de net YparéO.
-            </li>
-          </ul>
+      <div class="bloc_e">
+        <div id="paragraphe">
+          <button class="accordion">
+            III. Respect du planning et du fonctionnement de la formation :
+          </button>
+          <div class="panel">
+            <ul>
+              <li>
+                Nous nous conformerons rigoureusement aux horaires des cours,
+                tout en gardant à l'esprit que les rêves doivent se réaliser en
+                dehors de ces heures.
+              </li>
+              <li>
+                En cas d'empêchement, il est impératif de prévenir à l'avance.
+              </li>
+              <li>
+                Nous ferons des pauses lorsque nécessaire, sans attendre que
+                "monsieur trou du jour" se mette à percer.
+              </li>
+              <li>
+                Les formateurs veilleront à respecter les pauses convenues.
+              </li>
+              <li>
+                Nous nous abstiendrons de manger de l'Andouillette dans la salle
+                de classe.
+              </li>
+              <li>
+                Nous prendrons soin de la lumière et des yeux de nos camarades,
+                en les prévenant en cas de besoin.
+              </li>
+              <li>
+                Ensemble, nous oeuvrerons à la réalisation de nos diplômes, en
+                nous motivant mutuellement.
+              </li>
+              <li>
+                Nous pourrons compter les uns sur les autres, sauf, en cas
+                d'invasion zombie.
+              </li>
+              <li>
+                Davy sera le responsable de la bonne signature de net YparéO.
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
 
-      <div id="paragraphe">
-        <button class="accordion">
-          IV. Bien-être et développement personnel :
-        </button>
-        <div class="panel">
-          <ul>
-            <li>
-              Nous mettrons en place des activités de cohésion pour renforcer
-              notre groupe.
-            </li>
-            <li>Chacun s'engage à s'améliorer en anglais.</li>
-            <li>
-              Si un problème survient, nous nous engageons à en discuter
-              ouvertement au lieu de le garder pour nous jusqu'à Explosion,
-              <br />
-              ...ou Implosion.
-            </li>
-            <li>
-              Nous prendrons un selfie de notre tête le samedi soir pour
-              maintenir le lien entre nous tout en respectant la
-              confidentialité.
-            </li>
-          </ul>
+      <div class="bloc_f">
+        <div id="paragraphe">
+          <button class="accordion">
+            IV. Bien-être et développement personnel :
+          </button>
+          <div class="panel">
+            <ul>
+              <li>
+                Nous mettrons en place des activités de cohésion pour renforcer
+                notre groupe.
+              </li>
+              <li>Chacun s'engage à s'améliorer en anglais.</li>
+              <li>
+                Si un problème survient, nous nous engageons à en discuter
+                ouvertement au lieu de le garder pour nous jusqu'à Explosion,
+                <br />
+                ...ou Implosion.
+              </li>
+              <li>
+                Nous prendrons un selfie de notre tête le samedi soir pour
+                maintenir le lien entre nous tout en respectant la
+                confidentialité.
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
 
-      <div id="paragraphe" id="titre_sanctions">
-        <button class="accordion">V. Sanctions pour manquements :</button>
-        <div class="panel">
-          <ul>
-            <li>
-              En cas de quatre manquements à la charte sur une journée, il sera
-              demander au contrevenant de présenter un mini exposé le lendemain
-              pour rappeler nos engagements.
-            </li>
-            <li>
-              Je reconnais que cet engagement est essentiel pour ma réussite
-              académique et pour ma croissance personnelle en tant qu'étudiant.
-            </li>
-            <li>
-              Je m'efforcerai de respecter cette charte tout au long de mon
-              parcours de formation.
-            </li>
-          </ul>
+      <div class="bloc_g">
+        <div id="paragraphe" id="titre_sanctions">
+          <button class="accordion">V. Sanctions pour manquements :</button>
+          <div class="panel">
+            <ul>
+              <li>
+                En cas de quatre manquements à la charte sur une journée, il
+                sera demander au contrevenant de présenter un mini exposé le
+                lendemain pour rappeler nos engagements.
+              </li>
+              <li>
+                Je reconnais que cet engagement est essentiel pour ma réussite
+                académique et pour ma croissance personnelle en tant
+                qu'étudiant.
+              </li>
+              <li>
+                Je m'efforcerai de respecter cette charte tout au long de mon
+                parcours de formation.
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="differentes_regles">
+          <h4>
+            Grâce à ces différentes règles, on obtient un parfait algorithme
+            pour que la formation se passe pour le mieux !
+          </h4>
         </div>
       </div>
-      <div class="differentes_regles">
-        <h4>
-          Grâce à ces différentes règles, on obtient un parfait algorithme pour
-          que la formation se passe pour le mieux !
-        </h4>
-      </div>
-      <div class="code_js">
-        <p>
-          let competencesDePromo = []; <br />
-          let humeurPromo = 'Au top !';<br />
-          <br />
-          if ('règlescomprises' == true && 'règles appliquées' == true) {<br />
-          compétencesDePromo.push(newCompetences());<br />
-          } <br />
-          else { <br />
-          humeurPromo = 'PasTop !' }
-        </p>
+
+      <div class="bloc_h">
+        <div class="code_js">
+          <p>
+            let competencesDePromo = []; <br />
+            let humeurPromo = 'Au top !';<br />
+            <br />
+            if ('règlescomprises' == true && 'règles appliquées' == true) {<br />
+            compétencesDePromo.push(newCompetences());<br />
+            } <br />
+            else { <br />
+            humeurPromo = 'PasTop !' }
+          </p>
+        </div>
       </div>
 
       <footer>
@@ -200,6 +221,6 @@
           <button id="change">Random Apprenant</button>
         </div>
       </footer>
-    </container>
+    </content>
   </body>
 </html>
