Btn rouge passe dessous Titre calé à droite

--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
       </header>
 
       <div class="bloc_b">
+        <div class="intro">
+          <span><p id="titre_classe">Notre charte de promo</p></span>
+          <span>
+            <p>
+              Ces règles vont devoir s'ajouter à la charte que nous avons signé.
+              Ces règles sont évidemment officieuses mais elles nous
+              unissent!<br />...Prenez plaisir à les découvrir!
+              <span><img src="images/740842.png" /></span>
+            </p>
+          </span>
+        </div>
+
         <div class="bouton_rouge_haut">
           <button
             id="btn_rouge"
@@ -24,16 +36,6 @@
           >
             Accès Github
           </button>
-        </div>
-
-        <div class="intro">
-          <p id="titre_classe">Notre charte de promo</p>
-          <p>
-            Ces règles vont devoir s'ajouter à la charte que nous avons signé.
-            Ces règles sont évidemment officieuses mais elles nous unissent!<br />...Prenez
-            plaisir à les découvrir!
-            <span><img src="images/740842.png" /></span>
-          </p>
         </div>
       </div>
 
