--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <container>
       <div id="charte">
         <div class="bouton_rouge_haut">
-          <button
-            onclick="window.location.href='https://github.com/IdrissaSoumare/Idris-Xavier-brief-charte.git';"
+          <a
+            href="https://github.com/IdrissaSoumare/Idris-Xavier-brief-charte.git"
           >
             Accès Github
-          </button>
+          </a>
         </div>
         <div>
           <h2>Notre charte de promo</h2>
